Enhance Edgeworth Box Simulator with discrete allocation mode and new presets; improve solver robustness for custom preferences and add utility checks for Pareto efficiency.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ outputs/
 # OS files
 .DS_Store
 node_modules
+/Users/kai/Documents/streamedgeworth/examples.md
+/Users/kai/Documents/streamedgeworth/requirements.txt
